[gd_scene load_steps=13 format=2]

[ext_resource path="res://Script/axe.gd" type="Script" id=1]
[ext_resource path="res://sprite/axeTRash1.png" type="Texture" id=2]
[ext_resource path="res://Script/RayCast2D.gd" type="Script" id=3]
[ext_resource path="res://sprite/SlashAxe.png" type="Texture" id=4]
[ext_resource path="res://Script/Shaders/outline.shader" type="Shader" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 42, 42 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 42, 0, 42, 42 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 84, 0, 42, 42 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), null ],
"loop": true,
"name": "Slash",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8.22737, 16.0533 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 5 )
shader_param/outline_color = null

[sub_resource type="Animation" id=7]
length = 0.8
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0, 138.124, 110.7, -0.25, 0, 0.25, 0, 110.7, -0.25, 0, 0.138378, -31.9139, 0, -0.106111, 130.384, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("../hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.01, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="Axe" type="Node2D"]

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 8, 0 )
script = ExtResource( 3 )

[node name="Slash" type="AnimatedSprite" parent="RayCast2D"]
position = Vector2( 12.879, 0 )
frames = SubResource( 4 )
animation = "Slash"
frame = 1

[node name="hitbox" type="Area2D" parent="RayCast2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCast2D/hitbox"]
position = Vector2( 19.6784, 0.125 )
shape = SubResource( 5 )
disabled = true

[node name="axe" type="Sprite" parent="RayCast2D"]
material = SubResource( 6 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="point" type="Position2D" parent="RayCast2D/axe"]
position = Vector2( 7.669, 0 )

[node name="AxeAttack" type="AnimationPlayer" parent="RayCast2D/axe"]
anims/attack = SubResource( 7 )

[connection signal="animation_finished" from="RayCast2D/Slash" to="RayCast2D" method="_on_Slash_animation_finished"]
[connection signal="body_entered" from="RayCast2D/hitbox" to="RayCast2D/axe" method="_on_hitbox_body_entered"]
[connection signal="animation_finished" from="RayCast2D/axe/AxeAttack" to="RayCast2D" method="_on_AxeAttack_animation_finished"]
[connection signal="animation_finished" from="RayCast2D/axe/AxeAttack" to="RayCast2D/axe" method="_on_AxeAttack_animation_finished"]
